	  While in a chat mode you can talk in global chat with '/g text here'.
	  to clear all chat modes '/g'.
	- Added a new permission node for global chat ('/g') of 'towny.chat.global'.
	- added {worldname} as a chat tag entry.
v0.77.1.6:
	- Fix residents accounts being wiped when a town is deleted.
	- Rotated the Towny compass to reflect the sun setting in the west.
	- Added 'delete_economy_account' so admins can control whether Towny will delete the economy account when it deletes the resident.
v0.77.1.7:
	- '/plot claim' can again be used by mayors to recaim plots (which are not for sale) for the town.
v0.77.1.8:
	- Fixed missing dependency when using '/towny top money all'.
v0.77.1.9:
	- Added minimum distance checks on outpost claims 'min_distance_from_town_homeblock'.
	- Players are now able to create towns/nations if permissions are disabled 'using_permissions : false'.
	- Updated permission nodes in config.yml.
	- Added a new entry in 'Default Town/Plot flags' so admins can configure the defaults for pvp,fire,explosions and mob spawns.
	- Added new settings in 'Default new world settings' for fire, explosions and enderman pickup/place. Admins can now configure settings per world for the wilderness.
	- Adjusted world PVP so it only affects the wilderness. You can now disable PVP in the wilderness yet allow it in towns (enabled town pvp overrides plot pvp).
v0.77.1.10:
	- Fixed War plot damage messages to correctly display.
	- Fixed War timers so you can once again start wars with '/townyadmin toggle war'.
	- Added a new toggle so you can disable block damage during a war event (allow_block_griefing).
	- Adjusted Towny cheat protection so it will not affect players in creative mode.
	- Fixed loading of allies for nations.
	- Fixed typo for towny.cheat.bypass in new permission node code.
v0.77.1.11:
	- Explosion regen now fills the hole from the bottom up (No more bouncing loot).
	- Prevented 'plot fs $' from using negative values.